[package]
name = "replay_service"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
actix-web-httpauth = "0.6.0-beta.3"
actix-files = "0.6.0-beta.8"
futures-util = "0.3.17"
mongodb = "2.0.0"
bson = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
mime = "0.3.14"
futures = "0.3"