[package]
name = "replay_service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.2.0"
actix-web = "4.0.0-beta.8"
actix-web-httpauth = "0.6.0-beta.3"
actix-files = "0.6.0-beta.8"
futures-util = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
env_logger = "0.9.0"
log = "0.4.14"
futures = "0.3"
diesel = { version = "1.4.8", features = ["postgres", "r2d2", "chrono"] }
serde_json = "1.0"
dotenv = "0.15.0"
tokio-postgres = "0.7.5"
r2d2_postgres = "0.18.1"
chrono = { version = "0.4.19", features = ["serde"] }
diesel_migrations = "1.4.0"